# mini-query-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
assets/: architecture.excalidraw
mini/: app.py  bigquery.py  convert_sql.py  db.py  exceptions.py  models.py
mini/utils/: decorators.py  request.py  storage.py
